--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@ scipy==1.16.3
 huggingface-hub>=0.34.0,<1.0
 sentence-transformers==5.1.2
 langchain==1.1.3
-langchain-community==0.4.1
 langchain-core==1.1.2
+langchain-community==0.4.1
 langchain-huggingface==1.1.0
-langchain-mistralai==0.2.6
+langchain-mistralai>=0.3.1
 langchain-text-splitters==1.0.0
 
 numpy==2.3.5
